<resources>
    <string name="app_name">AppIdrm</string>
    <string name="InicioDeSesion">Inicio de sesión</string>
    <string name="e_mail">E-mail</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Contrasena_confirmation">Confirmar contraseña</string>
    <string name="St_Btn_Ingresar">Ingresar</string>
    <string name="St_Link_NoRegistro">¿Aún no te has registrado?</string>
    <string name="idrm_madrid">2020 Idrm - Madrid</string>
    <string name="Instituto">Instituto de recreación y deporte</string>
    <string name="Sub_InicioSesion">Ingresa tus datos para iniciar sesión.</string>
    <string name="Label_register">Registro</string>
    <string name="Sub_Register">Ingresa tus datos para registrarte</string>
    <string name="Label_name">Nombre Completo</string>
    <string name="St_Btn_Register">Confirmar</string>
    <string name="lable_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_in_your_details">Por favor completa tus datos</string>
    <string name="Btn_Escenarios">Escenarios</string>
    <string name="Btn_My_appointments">Mis reservas</string>
    <string name="Btn_Schools">Programas</string>
    <string name="Btn_log_out">Cerrar sesión</string>
    <string name="label_menu">Menú</string>
    <string name="label_Bienvenidos">Bienvenidos!</string>
    <string name="label_Reservas">Escenarios deportivos</string>
    <string name="label_My_Appointment">Mis reservas</string>
    <string name="label_TrainingSchool">Programas</string>
    <string name="label_Escenario">Escenarios</string>
    <string name="label_Schedule_date">Fecha para la reserva</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="St_Btn_ViewEscenario">Ver escenario</string>

    <string name="item_appointment_id"> Reserva # %1$d </string>
    <string name="item_appointment_date"> Día de la reserva: %1$s </string>
    <string name="item_appointment_time"> para las %1$s </string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_create_reser_exit_title">¿ Estas seguro que deseas salir?</string>
    <string name="dialog_create_reserv_message">Si abandonas el registro los datos que habias ingresado se perderán.</string>
    <string name="dialog_create_reser_exit_positive_btn">Sí, salir</string>
    <string name="dialog_create_reser_exit_negative_btn">Continuar con la reserva</string>
    <string name="btn_cv_Siguiente_create_appointment">Siguiente</string>
    <string name="Btn_Confirmar_appointment">Confirmar</string>
    <string name="lable_confirm_appointment_title">Reserva</string>
    <string name="lable_confirm_appointment_inf">Confirmar datos</string>
    <string name="lable_confirm_appointment_escenario">Escenario :</string>
    <string name="lable_confirm_appointment_address">Dirección:</string>
    <string name="lable_confirm_appointment_scheduleDate">Fecha:</string>
    <string name="lable_confirm_appointment_scheduleTime">Hora:</string>
    <string name="btn_menu">Menú</string>
    <string name="error_loading_escenarios">Ocurrió un problema al cargar los escenarios</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesarion definir una hora para le reserva</string>
    <string name="Error_loadin_hours">No se han podido cargar las horas</string>
    <string name="label_select_esce_date">Seleccione un escenario y una fecha, para ver horas disponibles</string>
    <string name="label_not_available_hours">Lo sentimos! No se encontraron horas disponibles para este día</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="item_appointment_created_at">Esta se registro el dia %1$s </string>
    <string name="label_motivo">Motivo de la reserva</string>
    <string name="validate_appointment_motivo">El motivo no es claro</string>
    <string name="lable_confirm_appointment_motivo">Motivo de la resereva:</string>
    <string name="create_appointment_success">Reserva Registrada Correctamente</string>
    <string name="create_appointment_error">Ocurrio un error inesperado registrando la reserva</string>
    <string name="error_register_empty_fields">Por favor completar los datos</string>
    <string name="error_register_password_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_register_validation">Ocurrio un error en el registro</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_escenarios">Map</string>
    <string name="title_activity_escenarios_maps">Map</string>

</resources>