<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/mainLayout"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp">

        <LinearLayout
            android:layout_height="60dp"
            android:layout_width="match_parent">
            <ImageView
                android:src="@drawable/logo"
                android:layout_width="80dp"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="18dp">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:text="@string/InicioDeSesion"/>
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/Sub_InicioSesion"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/trasparent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/e_mail"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/Contrasena"/>

            <EditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/login"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/radius_button"
                android:text="@string/St_Btn_Ingresar"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvGoToRegister"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/St_Link_NoRegistro"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/idrm_madrid"/>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/Instituto"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>