<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp">

        <LinearLayout
            android:layout_height="60dp"
            android:layout_width="match_parent">
            <ImageView
                android:src="@drawable/logo"
                android:layout_width="80dp"
                android:layout_height="50dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:text="@string/label_menu"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

            <Button
                android:id="@+id/btn_TrainingSchools"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:background="@drawable/radius_button_acent"
                android:drawableEnd="@drawable/podio_white"
                android:text="@string/Btn_Schools"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_CreateAppointmet"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:background="@drawable/radius_button_acent"
                android:text="@string/Btn_Escenarios"
                android:drawableEnd="@drawable/ubicacion_white"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_MyAppointment"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:background="@drawable/radius_button_acent"
                android:text="@string/Btn_My_appointments"
                android:drawableEnd="@drawable/calendario_white"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_logOut"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:background="@drawable/radius_button_acent"
                android:drawableEnd="@drawable/flecha_white"
                android:text="@string/Btn_log_out"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/MenuClose"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="8dp"
                android:background="@drawable/radius_button_acent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableEnd="@drawable/cerrar_white"
                android:layout_gravity="right"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>